--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="email_address">Email Address</string>
+    <string name="messages">Messages</string>
+    <string name="gear_management">Gear Management</string>
+    <string name="gear_inventory">Gear Inventory</string>
 </resources>
