Added the add club text and fixed a few errors in the xml.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="messages">Messages</string>
     <string name="gear_management">Gear Management</string>
     <string name="gear_inventory">Gear Inventory</string>
+    <string name="add_club">Add Club</string>
 </resources>
