--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="gear_inventory">Gear Inventory</string>
     <string name="add_club">Add Club</string>
     <string name="action_settings">Action Settings</string>
+    <string name="item_type">Item type</string>
+    <string name="item_1">Item 1</string>
+    <string name="item_2">Item 2</string>
+    <string name="item_3">Item 3</string>
 </resources>
