Set up the dash recycler view and hard coded items to show the view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="edit_item">Edit Item</string>
     <string name="condition">Condition:</string>
     <string name="dashboard">Dashboard</string>
+    <string name="rental_text">Rental text</string>
 </resources>
