Added expand/collapse functionality to inventory card views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="item_1">Item 1</string>
     <string name="item_2">Item 2</string>
     <string name="item_3">Item 3</string>
+    <string name="see_less">See Less</string>
     <string name="see_more">See More</string>
     <string name="demo_check_in_title"><b>4 Person Tent #2</b></string>
     <string name="complete_check_in">Complete Check-In</string>
