--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,9 @@
     <string name="passcode">Passcode</string>
     <string name="manage_gear">Manage Gear</string>
     <string name="title_activity_main_management">MainActivity</string>
+    <string name="rental_title">Rental Title</string>
+    <string name="check_out">Check Out</string>
+    <string name="forms">Forms</string>
+    <string name="check_in">Check In</string>
+    <string name="overview">Overview</string>
 </resources>
