--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,9 @@
     <string name="view_inventory">View Inventory</string>
     <string name="add_another_item">Add Another Item</string>
     <string name="add_club">Add Club</string>
+    <string name="add_new_item_category">Add New Item Category</string>
+    <string name="category_name">Category Name</string>
+    <string name="add_category">Add Category</string>
+    <string name="add_prompt">Which would you like to add?</string>
+    <string name="add_item">Add Item</string>
 </resources>
