Finished cart xmls, cart fragment, and navigation to cart, although not adding gear to cart yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,11 @@
     <string name="add_category">Add Category</string>
     <string name="add_prompt">Which would you like to add?</string>
     <string name="add_item">Add Item</string>
+    <string name="rental_start_date">Rental Start Date:</string>
+    <string name="rental_end_date">Rental End Date:</string>
+    <string name="total">Total:</string>
+    <string name="rental_items">Rental Items</string>
+    <string name="quantity">Quantity</string>
+    <string name="cost">Cost</string>
+    <string name="rental_item">Rental Item</string>
 </resources>
