Added the login methods so data could be tied with users. Also created a splash fragment xml and fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,7 @@
     <string name="quantity">Quantity</string>
     <string name="cost">Cost</string>
     <string name="rental_item">Rental Item</string>
+    <string name="add_demo_data">Add Demo Data</string>
+    <string name="log_out">Log Out</string>
+    <string name="login_with_email">Login with Email</string>
 </resources>
