Fixed an xml issue and extracted some strings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,6 @@
     <string name="add_demo_data">Add Demo Data</string>
     <string name="log_out">Log Out</string>
     <string name="login_with_email">Login with Email</string>
+    <string name="mountains">Mountains</string>
+    <string name="login_with_rosefire">Login with RoseFire</string>
 </resources>
