Images can now be added using an ImageProducer. Add item and check in both can use this feature.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,9 @@
 <resources>
     <string name="app_name">GearLocker</string>
-    <string name="create_an_account"><u>Create an account</u></string>
-    <string name="login">Login</string>
-    <string name="password">Password</string>
-    <string name="email_address">Email Address</string>
     <string name="messages">Messages</string>
     <string name="gear_management">Management</string>
     <string name="gear_inventory">Inventory</string>
-    <string name="action_settings">Action Settings</string>
     <string name="item_type">Item type</string>
-    <string name="item_1">Item 1</string>
-    <string name="item_2">Item 2</string>
-    <string name="item_3">Item 3</string>
     <string name="see_less">See Less</string>
     <string name="see_more">See More</string>
     <string name="demo_check_in_title"><b>4 Person Tent #2</b></string>
@@ -71,4 +63,6 @@
     <string name="login_with_rosefire">Login with RoseFire</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="edit">Edit</string>
+    <string name="upload_photo">Upload Photo</string>
+    <string name="take_photo">Take Photo</string>
 </resources>
