--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,7 @@
     <string name="rent_duration">Rented For:</string>
     <string name="check_out_condition">Check-Out Condition:</string>
     <string name="demo_item_description">Designed for the climber looking for a single pair to do it all, the La Sportiva Tarantulace are jack-of-all-trades climbing shoes comfortable enough for all-day climbs or a trip to the rock gym.</string>
-    <string name="demo_stock_information">
-        Est. Value: $50.00
-        \nAvailable: 1 pair
-        \nTotal: 5 pairs</string>
+    <string name="demo_stock_information">Est. Value: $50.00</string>
     <string name="delete_an_item">Delete an item</string>
     <string name="edit_item">Edit Item</string>
     <string name="condition">Condition:</string>
