--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="edit">Edit</string>
     <string name="upload_photo">Upload Photo</string>
     <string name="take_photo">Take Photo</string>
+    <string name="switch_club">Switch Club</string>
 </resources>
