--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="item_type">Item type</string>
     <string name="see_less">See Less</string>
     <string name="see_more">See More</string>
-    <string name="demo_check_in_title"><b>4 Person Tent #2</b></string>
     <string name="complete_check_in">Complete Check-In</string>
     <string name="cancel_check_in">Cancel Check-In</string>
     <string name="condition_new">New</string>
@@ -18,8 +17,6 @@
     <string name="check_out_photo">Check-Out Photo</string>
     <string name="rent_duration">Rented For:</string>
     <string name="check_out_condition">Check-Out Condition:</string>
-    <string name="demo_item_description">Designed for the climber looking for a single pair to do it all, the La Sportiva Tarantulace are jack-of-all-trades climbing shoes comfortable enough for all-day climbs or a trip to the rock gym.</string>
-    <string name="demo_stock_information">Est. Value: $50.00</string>
     <string name="delete_an_item">Delete an item</string>
     <string name="edit_item">Edit Item</string>
     <string name="condition">Condition:</string>
@@ -53,7 +50,6 @@
     <string name="quantity">Quantity</string>
     <string name="cost">Cost</string>
     <string name="rental_item">Rental Item</string>
-    <string name="add_demo_data">Add Demo Data</string>
     <string name="log_out">Log Out</string>
     <string name="login_with_email">Login with Email</string>
     <string name="mountains">Mountains</string>
@@ -63,4 +59,5 @@
     <string name="upload_photo">Upload Photo</string>
     <string name="take_photo">Take Photo</string>
     <string name="switch_club">Switch Club</string>
+    <string name="leave_club">Leave Club</string>
 </resources>
