Did a messages fix since I found the work around.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,9 @@
     <string name="take_photo">Take Photo</string>
     <string name="switch_club">Switch Club</string>
     <string name="leave_club">Leave Club</string>
+    <string name="leave">Leave</string>
+    <string name="cancel">Cancel</string>
+    <string name="join">Join</string>
+    <string name="return_to_home">Return to Management Home</string>
+    <string name="check_in_complete">Check-In Complete</string>
 </resources>
